WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288346
[IndexedDB] Added records should be removed if transaction aborts
https://bugs.webkit.org/show_bug.cgi?id=288346
Summary
[IndexedDB] Added records should be removed if transaction aborts
Sihui Liu
Reported
2025-02-23 19:28:58 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2025-02-23 20:43:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41182
Radar WebKit Bug Importer
Comment 2
2025-02-24 12:45:37 PST
<
rdar://problem/145501159
>
EWS
Comment 3
2025-02-26 08:58:27 PST
Committed
291126@main
(b5d274d82a73): <
https://commits.webkit.org/291126@main
> Reviewed commits have been landed. Closing PR #41182 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug