Source/WebCore/Modules/indexeddb/server/MemoryObjectStore.h
@@ -64,6 +64,7 @@ public:
 
     void writeTransactionStarted(MemoryBackingStoreTransaction&);
     void writeTransactionFinished(MemoryBackingStoreTransaction&);
+    void transactionAborted(MemoryBackingStoreTransaction&);
     MemoryBackingStoreTransaction* writeTransaction();
 
     IDBError addIndex(MemoryBackingStoreTransaction&, const IDBIndexInfo&);
@@ -84,7 +85,6 @@ public:
     void setKeyGeneratorValue(uint64_t value) { m_keyGeneratorValue = value; }
 
     void clear();
-    void replaceKeyValueStore(std::unique_ptr<KeyValueMap>&&, std::unique_ptr<IDBKeyDataSet>&&);
 
     ThreadSafeDataBuffer valueForKey(const IDBKeyData&) const;
     ThreadSafeDataBuffer valueForKeyRange(const IDBKeyRangeData&) const;
@@ -124,12 +124,13 @@ private:
     IDBObjectStoreInfo m_info;
 
     CheckedPtr<MemoryBackingStoreTransaction> m_writeTransaction;
+    uint64_t m_keyGeneratorValueBeforeTransaction { 1 };
     uint64_t m_keyGeneratorValue { 1 };
 
+    KeyValueMap m_transactionModifiedRecords;
     std::unique_ptr<KeyValueMap> m_keyValueStore;
     std::unique_ptr<IDBKeyDataSet> m_orderedKeys;
 
-    void unregisterIndex(MemoryIndex&);
     HashMap<IDBIndexIdentifier, RefPtr<MemoryIndex>> m_indexesByIdentifier;
     HashMap<String, RefPtr<MemoryIndex>> m_indexesByName;
     HashMap<IDBResourceIdentifier, std::unique_ptr<MemoryObjectStoreCursor>> m_cursors;
